AddPetTests реализация + доработки